client/src/features/chat/Message.module.scss
@import '../../base.scss';

.message {
    min-width: 10px;
    align-self: end;
    padding: 4px 10px;
    margin-bottom: 10px;
    background-color: $white;
    border-radius: 15px;
    position: relative;
    z-index: 2;

    border-bottom: 1px solid $light-gray;
    border-left: 0;


    &::before {
        content: "";
        position: absolute;
        right: 0%;
        top: 0%;
        width: 0;
        height: 0;
        border-left: 10px solid transparent;
        border-right: 10px solid transparent;
        border-top: 15px solid;
        border-top-color: $white;
        margin-right: -10px;
        clear: both;
    }

    .text {
        padding-bottom: 5px;
    }

    .time {
        text-align: end;
        font-size: 0.8em;
        color: $gray;
    }

    &.me {
        align-self: start;
        background-color: $ivory;
        border-bottom: 1px solid $light-gray;

        border-right: 0;

        &::before {
            left: 0%;
            margin-left: -10px;
            border-top-color: $ivory;
        }

        .time {
            text-align: start;
        }
    }

}

